infra/manifests/platform/networking/resources.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
  namespace: networking
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: networking
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: '*.ariaamini.com'
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ariaamini-com-tls
            namespace: networking
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure-root
      port: 8443
      protocol: HTTPS
      hostname: ariaamini.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ariaamini-com-tls
            namespace: networking
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cross-namespace-gateway
  namespace: networking
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: imdbgraph
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
    - group: ''
      kind: Secret
